play/index.css
iframe#namu {
    width: 100%;
    height:calc(100% - 30px);
    border: 0px solid;
}
div#top_pane {
    width: 100%;
    background-color: #152330;
    text-align: right;
    padding-right: 20px;
}

div.initial-content {
    display: flex;
    flex-direction: column;
}

div#codepad textarea, div#codepad pre {
    font-family: Retro Gaming;
    line-height: 1em;
    font-size: 15px;
    background-color: transparent;
    word-break: break-all;
    white-space: break-spaces;
    padding-left: 50px;
    padding-right: 50px;
    flex: 1 0 auto;
}

div#bottom_pane {
  display: flex;
  flex: 1 1 auto;
}

div#codepad{
  width: 100%;
  background-color: #152330;
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
}

textarea#ta_codepad {
    position:absolute;
    color: transparent;
    z-index: 1;
    border: none;
    margin-top: -4px;
    resize: none;
    overflow-y: hidden;
    caret-color: white;
}

textarea#ta_codepad:focus {
    outline: none !important;
    box-shadow: none !important;
}

pre#pre_codepad {
    height:100%;
    z-index: 0;
    margin: 0;
    text-overflow: ellipsis;
    color: #618162;
}

pre#pre_codepad span {
    word-break: break-all;
    white-space: break-spaces;
}

div#result{
  width:100%;
  background-color: #204261;
  display: none;
}

@media screen and (min-width: 950px) {
  div#bottom_pane {
    flex-direction: row;
  }

  div#result{
    flex: 1 1 auto;
  }
}

@media screen and (max-width: 950px) {
  div#bottom_pane {
    flex-direction: column;
  }

  div#result{
    height: 140px;
  }
}

div.search-content {
    flex: 0;
    display: none;
    height: 0px;
}
@font-face {
    font-family: 'Retro Gaming';
    font-style: 'normal';
    font-weight: 400;
    src: url('Retro Gaming.ttf') format('truetype');
}

label#lb_verbose {
    display:inline;
    margin-right: 20px;
}

.bin_ver {
    font-size: smaller;
    display: contents;
}

.scrollbar::-webkit-scrollbar {
  width: 6px;
}

.scrollbar::-webkit-scrollbar-track {
  background-color: transparent;
}

.scrollbar::-webkit-scrollbar-thumb {
  border-radius: 3px;
  background-color: #11999e;
}

.scrollbar::-webkit-scrollbar-button {
  width: 0;
  height: 0;
}

input#runbt {
    border-radius: 1.4rem;
    background-color: #8C7765;
    width: 80px;
}

input#runbt:hover {
    background-color: #F3EDDB;
}

select#dd-srcs {
    border-radius: 1.4rem;
    background-color: #333740;
    color: #F3EDDB;

    padding-left: 15px;
    padding-right: 15px;
    margin-right: 20px;
}

input#bt-close {
    float: right;
    display: none;
    width: 30px;
    height: 30px;
    margin-right: 5px;
    margin-top: 5px;
    background-color: #8C7765;
    border-radius: 15px;
    padding-top: 0px;
}

input#bt-close:hover {
    background-color: #F3EDDB;
}

div#result b {
    color: #fff;
}

div#result img {
    margin-left: 20px;
    margin-right: 5px;
    width: 20px;
    height: 20px;
}

